# windswept

./: .gitignore  Cargo.toml  README
docs/: background.txt  future_plans.txt  keybinds.txt
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: index.html
frontend/src/: App.svelte  ContextMenu.svelte  dnd.js  main.js  markdown.js  model.js
frontend/src/board/: StatusBoard.svelte  StructureBoard.svelte  style.scss
frontend/src/style/: global.scss  variables.scss
frontend/src/task_list/: Task.svelte  TaskList.svelte
src/: main.rs  sync_actor.rs
